--- a/src/pages/editor/styles.css
+++ b/src/pages/editor/styles.css
@@ -13,4 +13,12 @@ html, body {
 #text {
     width: 100%;
     height: 100%;
+    background-color: #3e3e3e;
+    color: #eee;
+    font-size: 18px;
+    padding: 5px;
+}
+
+#text:focus{
+    outline: none;
 }
